@@ -169,6 +169,7 @@ const CodecTag codec_bmp_tags[] = {
     { CODEC_ID_SVQ1, MKTAG('s', 'v', 'q', '1') },
     { CODEC_ID_TSCC, MKTAG('t', 's', 'c', 'c') },
     { CODEC_ID_ULTI, MKTAG('U', 'L', 'T', 'I') },
+    { CODEC_ID_VIXL, MKTAG('V', 'I', 'X', 'L') },
     { CODEC_ID_RAWVIDEO, 0 },
     { 0, 0 },
 };
